--- a/quiz.css
+++ b/quiz.css
@@ -91,10 +91,12 @@ main{
 #sidebar{
     width: 180px;
     border: 4px solid black;
+    position: relative;
 }
 #content{
     border: 6px solid blue;
     flex-grow: 1;
+    position: relative;
 }
 .menu-icon{
     display: flex;
@@ -111,3 +113,14 @@ main{
     background-color:rgb(42, 25, 3);
     color:  rgb(165, 165, 222);
 } 
+#menu-icon1{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    
+}
+#menu-icon2{
+    position: absolute;
+    left: 5px;
+    top: 5px;
+}
