--- a/quiz.css
+++ b/quiz.css
@@ -1,36 +1,37 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     /* background-color: rgb(82, 161, 175); */
-    background: linear-gradient(to right,transparent,rgb(82, 161, 175)),url("img/img10.jpg");
+    background: linear-gradient(to right, transparent, rgb(82, 161, 175)), url("img/img10.jpg");
     font-family: 'Indie Flower', cursive;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    
-    
+
+
 }
 
-header{
-    background:linear-gradient(to right,rgb(6, 113, 162),rgba(0,0,0,0.5)) ;
+header {
+    background: linear-gradient(to right, rgb(6, 113, 162), rgba(0, 0, 0, 0.5));
     padding: 15px 5px 15px 35px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     display: flex;
     align-items: center;
-gap: 15px;
+    gap: 15px;
 
 }
-.logo img{
+
+.logo img {
     width: 55px;
     height: 55px;
     border: 2px solid bisque;
@@ -38,67 +39,79 @@ gap: 15px;
     padding: 7px;
     background-color: rgb(82, 161, 175);
     transform: rotate(-20deg);
-    
+
 }
+
 .logo h1 {
-    
+
     font-family: 'Indie Flower', cursive;
-    color:darkblue;
+    color: darkblue;
     font-size: 2rem;
     font-weight: bolder;
     z-index: 7;
 
-    
-    
+
+
 
 }
+
 .logo h1 span {
     font-size: 1.5rem;
     color: rgb(222, 27, 27);
-    
+
 }
-.liste{
+
+.liste {
     display: flex;
     align-items: center;
     gap: 25px;
 
 
 }
-.liste li{
+
+.liste li {
     list-style-type: none;
 }
-#icon{
+
+#icon {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color:darkblue ;
+    color: darkblue;
     font-weight: bolder;
     /* font-family: 'Indie Flower', cursive; */
 
-    
+
 }
-#icon i{
+
+#icon i {
     color: rgb(222, 27, 27);
     font-size: 1.5rem;
 }
-main{
+
+main {
     border: 5px solid red;
- flex-grow: 1;
- display: flex;
- align-items: stretch;justify-content: flex-start;  
+    flex-grow: 1;
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
 
 }
-#sidebar{
+
+#sidebar {
     width: 180px;
     border: 4px solid black;
     position: relative;
 }
-#content{
+
+#content {
     border: 6px solid blue;
     flex-grow: 1;
     position: relative;
+    display: flex;
 }
-.menu-icon{
+
+.menu-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -108,20 +121,63 @@ main{
     color: rgb(48, 28, 4);
     background-color: rgb(165, 165, 222);
 }
-.menu-icon:hover{
+
+.menu-icon:hover {
     cursor: pointer;
-    background-color:rgb(42, 25, 3);
-    color:  rgb(165, 165, 222);
-} 
-#menu-icon1{
+    background-color: rgb(42, 25, 3);
+    color: rgb(165, 165, 222);
+}
+
+#menu-icon1 {
     position: absolute;
     right: 5px;
     top: 5px;
-    
+
 }
-#menu-icon2{
+
+#menu-icon2 {
     position: absolute;
     left: 5px;
     top: 5px;
     display: none;
+}
+
+.soru {
+    border: 4px solid white;
+    /* position: absolute; */
+    /* right: 0px; */
+    width: 200px;
+    /* padding: 60px; */
+    /* height: 100%; */
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    gap: 16px;
+
+
+
+
+}
+
+.number {
+    /* border: 2px solid palegreen; */
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: darkblue;
+    font-size: larger;
+    font-weight: bolder;
+    color: bisque;
+}
+
+.quiz {
+    border: 5px solid fuchsia;
+    /* position: absolute; */
+    flex-grow: 1;
+    padding: 40px;
+    height: 100%;
 }
